--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-filesize": "^1.2.1",
+    "rollup-plugin-fill-html": "^1.0.1",
     "rollup-plugin-hash": "^1.2.0",
-    "rollup-plugin-img": "^1.0.4",
+    "rollup-plugin-img": "^1.0.5",
     "rollup-plugin-jsx": "^1.0.3",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-postcss": "^0.4.1",
