--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss-modules": "^0.6.4",
     "postcss-px2rem": "^0.3.0",
     "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-clean": "^1.0.0",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-filesize": "^1.2.1",
     "rollup-plugin-fill-html": "^1.0.1",
