--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "webpack_build": "NODE_ENV=production BABEL_ENV=webpack webpack --progress -p --bail"
   },
   "devDependencies": {
+    "add": "^2.0.6",
+    "autoprefixer": "^7.1.2",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^6.4.1",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -19,12 +22,14 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "cssnano": "^3.10.0",
+    "eslint-plugin-react": "^7.1.0",
     "node-sass": "^4.5.2",
     "postcss-modules": "^0.6.4",
     "postcss-px2rem": "^0.3.0",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-clean": "^1.0.0",
     "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-eslint": "^4.0.0",
     "rollup-plugin-filesize": "^1.2.1",
     "rollup-plugin-fill-html": "^1.0.1",
     "rollup-plugin-hash": "^1.2.0",
@@ -37,7 +42,8 @@
     "rollup-plugin-serve": "^0.3.0",
     "rollup-plugin-uglify": "^1.0.1",
     "rollup-watch": "^3.2.2",
-    "webpack": "^2.4.1"
+    "webpack": "^2.4.1",
+    "yarn": "^0.27.5"
   },
   "dependencies": {
     "react": "^15.5.4",
